# rpi_vision_uav

./: .gitignore  .offboard_velocity.cpp.swp  CMakeLists.txt  calibration_parameters_rpi2.txt  detector_params.yml  main.cpp  marker_vision.h  matplot_animation.py  mavlink_helper.h  offboard_velocity.cpp  offboard_vision.cpp  plotly_animation.py  prueba.py  rpi_video_recorder.py  shared_memory_helper.h  tags  trayectory_gen.cpp  trayectory_gen.h  trayectory_generator.h  update_images.sh  vision_params.yml
calibration/: arucoConfig.yml
calibration/hp_camera/: arucoConfig.yml  cal.yml
calibration/rpi_eyefish_camera/: cal.yaml
calibration/rpi_v2_camera/: CMakeLists.txt  cal.avi  cal.yml  calibration_parameters_rpi.txt
python_scripts/: log_plot.py  matplot_animation.py  plot_csv.py  rpi_video_recorder.py  shutdown.py  startup.py
videos/: 2020-11-03_20-38-53.h264  2020-11-03_20-40-50.h264  2020-11-03_20-41-12.h264  2020-11-03_20-43-03.h264  2020-11-03_20-43-19.h264  2020-11-03_21-01-20.h264  2020-11-03_21-02-43.h264  2020-11-03_21-04-41.h264  2020-11-03_21-17-11.h264  2020-11-03_21-17-45.h264  2020-11-03_22-21-17.h264  2020-11-03_22-25-34.h264  2020-11-03_22-27-58.h264  2020-11-03_22-28-29.h264  2020-11-03_22-37-17.h264  2020-11-03_22-39-56.h264  2020-11-03_22-42-12.h264  2020-11-03_22-45-09.h264  2020-11-03_22-53-52.h264  2020-11-03_22-56-04.h264  2020-11-03_22-57-33.h264  2020-11-03_22-58-56.mkv  2020-11-03_23-04-02.mkv  2020-11-03_23-38-01.h264  2020-11-05_01-12-28.h264  2020-11-06_16-43-07.h264  2020-11-07_18-36-24.h264  2020-11-07_19-50-59.h264  2020-11-14_18-18-23.h264  2020-11-14_18-18-55.mkv  2020-11-14_18-20-40.mkv  2020-11-14_18-22-28.mkv  2020-11-14_18-23-10.mkv  2020-11-14_18-25-44.h264  2020-11-26_20-39-40.h264  2020-12-02_19-40-14.h264  2020-12-03_15-38-37.h264  chess3x4.h264  chess4x6.h264  chess5x7.h264  (+5 more)
vision/: CMakeLists.txt  detect_markers.cpp  offboard
vision_mavsdk/: CMakeLists.txt  offboard_vision.cpp
